           mode in Log::Log4perl::Appender::File
    * (ms) Added composite appender Log::Log4perl::Appender::Limit to
           limit message delivery to adjustable time windows.
    * (ms) Fixed last 033UsrCspec.t test case to run on Win32 as well
           (path fixed).
    * (ms) Lars Thegler <lars@thegler.dk> provided a patch to keep 
           compatibility with 5.005_03.

0.42 (02/14/2004)
    * (kg) added filters to XML DOMConfig and DTD
    * (ms) Fixed caller level to cspecs by adding one
    * (ms) Added init_once() and documentation
    * (ms) Worked around the perl bug that triggers __DIE__ handlers
           even if die() occurs within an eval(). So if you did
             BEGIN { $SIG{__DIE__} = sub { print "ouch!"; die }; }
             use Log::Log4perl;
           and Time::HiRes wasn't available, the 
             eval { require Time::HiRes }
           in PatternLayout.pm triggered the __DIE__ handler. Now there's
           a function module_available() in L4p::Util to check if a 
           module is installed.
    * (ms) Fixed %M cspec in PatternLayout in case a logging
           method is called within one (or more) eval {} block(s). 
           caller(n+m) will be called repeatedly if necessary
           to get the next real subroutine. Anonymous subroutines will 
           still be called __ANON__, but this can be overridden by 
           defining
               local *__ANON__ = "subroutine_name";
           in them explicitely (thanks, Perlmonks :).

0.41 (12/12/2003)
    * (ms) Applied documentation update for Synchronized appender, suggested
      by David Viner E<lt>dviner@yahoo-inc.comE<gt>
    * (ms) Added option to Log::Log4perl::Layout::PatternLayout to 
      enable people to provide their own timer functions.

0.40 (11/11/2003)
    * (ms) perl 5.005_03 fix for l4p::Appender::Synchronized
    * (ms) Fixed a bug in 0.39 (thanks to James King for finding) which
      caused composite appenders like Synchronized to just use 